--- a/index.html
+++ b/index.html
@@ -592,56 +592,56 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="testimonial-inner">
-                                        <h2 class="title mb-65"><span>"</span> Superb service! They brought our vision to life and surpassed our expectations. Our brand's transformation is truly impressive. Highly recommend! <span>"</span></h2>
+                                        <h2 class="title mb-65"><span>"</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel pellentesque lacus, quis viverra neque. Donec mattis neque nisl, eu bibendum lacus ultrices molestie. <span>"</span></h2>
                                         <div class="xb-tes-inner ul_li">
                                             <div class="xb-item--avater">
                                                 <span class="xb-item--desig">Head Of Idea</span>
                                                 <h4 class="xb-item--name">Amelia K. Hamilton</h4>
                                             </div>
                                             <div class="xb-item--content">
-                                                <p>Leveraging advanced technology and creative brilliance to deliver measurable results and enhance your brand's market impact.</p>
+                                                <p>Aenean condimentum risus lacus, vitae elementum libero volutpat sit amet.</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="testimonial-inner">
-                                        <h2 class="title mb-65"><span>"</span> Superb service! They brought our vision to life and surpassed our expectations. Our brand's transformation is truly impressive. Highly recommend! <span>"</span></h2>
+                                        <h2 class="title mb-65"><span>"</span> Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex. Adipiscing elit quisque faucibus ex sapien vitae pellentesque. <span>"</span></h2>
                                         <div class="xb-tes-inner ul_li">
                                             <div class="xb-item--avater">
                                                 <span class="xb-item--desig">CEO</span>
                                                 <h4 class="xb-item--name">Amelia K. Hamilton</h4>
                                             </div>
                                             <div class="xb-item--content">
-                                                <p>Leveraging advanced technology and creative brilliance to deliver measurable results and enhance your brand's market impact.</p>
+                                                <p>Nunc congue magna et lacinia aliquet. Sed facilisis velit egestas ante varius, ac tempus nisi convallis. Pellentesque sed arcu eu tortor vestibulum laoreet.</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="testimonial-inner">
-                                        <h2 class="title mb-65"><span>"</span> Superb service! They brought our vision to life and surpassed our expectations. Our brand's transformation is truly impressive. Highly recommend! <span>"</span></h2>
+                                        <h2 class="title mb-65"><span>"</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel pellentesque lacus, quis viverra neque. Donec mattis neque nisl, eu bibendum lacus ultrices molestie. <span>"</span></h2>
                                         <div class="xb-tes-inner ul_li">
                                             <div class="xb-item--avater">
                                                 <span class="xb-item--desig">Head Of Idea</span>
                                                 <h4 class="xb-item--name">Amelia K. Hamilton</h4>
                                             </div>
                                             <div class="xb-item--content">
-                                                <p>Leveraging advanced technology and creative brilliance to deliver measurable results and enhance your brand's market impact.</p>
+                                                <p>Aenean condimentum risus lacus, vitae elementum libero volutpat sit amet.</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="testimonial-inner">
-                                        <h2 class="title mb-65"><span>"</span> Superb service! They brought our vision to life and surpassed our expectations. Our brand's transformation is truly impressive. Highly recommend! <span>"</span></h2>
+                                        <h2 class="title mb-65"><span>"</span> Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex. Adipiscing elit quisque faucibus ex sapien vitae pellentesque. <span>"</span></h2>
                                         <div class="xb-tes-inner ul_li">
                                             <div class="xb-item--avater">
                                                 <span class="xb-item--desig">CEO</span>
                                                 <h4 class="xb-item--name">Amelia K. Hamilton</h4>
                                             </div>
                                             <div class="xb-item--content">
-                                                <p>Leveraging advanced technology and creative brilliance to deliver measurable results and enhance your brand's market impact.</p>
+                                                <p>Nunc congue magna et lacinia aliquet. Sed facilisis velit egestas ante varius, ac tempus nisi convallis. Pellentesque sed arcu eu tortor vestibulum laoreet.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -939,13 +939,13 @@
                 <div class="container">
                     <div class="cta-wrap ul_li_between">
                         <div class="xb-item--holder ul_li">
-                            <div class="xb-item--logo mt-30">
-                                <img src="assets/img/logo/logo-white.svg" alt="">
+                            <div class="xb-item--logo">
+                                <img src="assets/img/logo/logo_white_small.png" alt="">
                             </div>
                             <div class="xb-item--line mt-30"></div>
-                            <p class="xb-item--content mt-30">With Us Happens. <span>We Would Love To Hear From You</span></p>
+                            <p class="xb-item--content mt-30">COM A GENTE ACONTECE. <span>ADORARÍAMOS OUVIR VOCÊ</span></p>
                         </div>
-                        <div class="xb-item--link mt-30">ready to rock with us? <br> <a href="contact.html">Get in touch</a></div>
+                        <div class="xb-item--link mt-30">ficou com alguma dúvida? <br> <a href="contact.html">Contate-nos</a></div>
                     </div>
                 </div>
              </section>
@@ -959,18 +959,18 @@
             <div class="container">
                 <div class="footer-wrap ul_li_between align-items-start">
                     <div class="footer-widget footer-widget--two">
-                        <span class="xb-item--title">essential</span>
+                        <span class="xb-item--title">essencial</span>
                         <ul class="footer-links list-unstyled">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="portfolio.html">Work</a></li>
-                            <li><a href="services.html">Expertise</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="index.html">Início</a></li>
+                            <li><a href="portfolio.html">Catálogo</a></li>
+                            <li><a href="about.html">Sobre nós</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="contact.html">Contato</a></li>
                         </ul>
                     </div>
                     <div class="footer-line"></div>
                     <div class="footer-widget footer-widget--two">
-                        <span class="xb-item--title">follow us</span>
+                        <span class="xb-item--title">SIGA-NOS</span>
                         <ul class="footer-links list-unstyled">
                             <li><a href="#!">facebook</a></li>
                             <li><a href="#!">twitter</a></li>
@@ -980,11 +980,11 @@
                         </ul>
                     </div>
                     <div class="footer-widget footer-widget--two">
-                        <span class="xb-item--title">get in touch</span>
+                        <span class="xb-item--title">fale conosco</span>
                         <ul class="footer-links list-unstyled">
-                            <li>info@empyr.com</li>
-                            <li>+(123) 456 789 00</li>
-                            <li>new booston tower, <br> nyc, usa</li>
+                            <li>contato@grafitize.com.br</li>
+                            <li>(21) 99870-8413</li>
+                            <li>Rio de Janeiro, Brasil</li>
                         </ul>
                     </div>
                 </div>
@@ -993,7 +993,7 @@
                 <div class="container">
                     <div class="footer-bottom ul_li_between">
                         <div class="xb-copyright">
-                            <p>copyright & design by <a href="contact.html">@empyr</a> - 2024</p>
+                            <p>copyright <a href="contact.html">Grafitize Gráfica</a> - 2025</p>
                         </div>
                         <ul class="footer_nav list-unstyled ul_li">
                             <li><a href="#!">get in touch</a></li>
