--- a/portfolio.html
+++ b/portfolio.html
@@ -184,15 +184,15 @@
                     <div class="row align-items-end mt-none-30">
                         <div class="col-lg-7 mt-30">
                             <div class="breadcrumb__content">
-                                <span class="breadcrumb__subtitle">Meet with Empyr agency</span>
-                                <h2 class="breadcrumb__title">Our <span>Portfolio</span></h2>
+                                <span class="breadcrumb__subtitle">Confira aqui</span>
+                                <h2 class="breadcrumb__title">nossos <span>Produtos</span></h2>
                             </div>
                         </div>
                         <div class="col-lg-5 mt-30">
                             <div class="breadcrumb__list-wrap text-lg-end mb-20">
                                 <ul class="breadcrumb__list clearfix ul_li">
                                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                    <li class="breadcrumb-item">Portfolio</li>
+                                    <li class="breadcrumb-item">Catálogo</li>
                                 </ul>
                             </div>
                         </div>
@@ -383,7 +383,7 @@
                             </div>
                         </div>
                         <div class="xb-btn port-btn text-center mt-85">
-                            <a href="portfolio.html" class="thm-circle xb-element-parallax">more <br> works</a>
+                            <a href="portfolio.html" class="thm-circle xb-element-parallax">mais <br> produtos</a>
                         </div>
                     </div>
                 </div>
@@ -524,8 +524,8 @@
                     <div class="row">
                         <div class="col-lg-8">
                             <div class="sec-title right-mr mb-70">
-                                <span class="sub-title">call to action</span>
-                                <h2 class="title"><span>WE’RE</span> HERE TO TALK ABOUT YOU YOUR COMPANY, YOUR <span>PRODUCT</span>, & YOUR <span>GOALS.</span></h2>
+                                <span class="sub-title">fale com a gente</span>
+                                <h2 class="title"><span>ESTAMOS AQUI </span> PARA MATERIALIZAR <span>SUAS IDEIAS,</span> SUA MARCA E <span>SEUS PROJETOS.</span></h2>
                             </div>
                         </div>
                         <div class="col-xl-7 col-lg-6 mt-15">
@@ -533,45 +533,44 @@
                                 <div class="xb-item--img">
                                     <img src="assets/img/icon/global-network.svg" alt="">
                                 </div>
-                                <h5 class="xb-item--title"><span>With Us Happens.</span> We Would Love To Hear From You</h5>
+                                <h5 class="xb-item--title"><span>COM A GENTE, ACONTECE.</span> ADORARÍAMOS OUVIR VOCÊ.</h5>
                             </div>
                         </div>
                         <div class="col-xl-5 col-lg-6">
                             <div class="contact-inner ml-60">
                                 <form class="contact-form" action="#">
                                     <div class="input-field pos-rel">
-                                        <input type="text" name="name" id="name" placeholder="your name">
+                                        <input type="text" name="name" id="name" placeholder="seu nome">
                                         <div class="xb-icon"><img src="assets/img/icon/user.svg" alt=""></div>
                                     </div>
                                     <div class="input-field pos-rel">
-                                        <input type="text" name="email" id="email" placeholder="business email">
+                                        <input type="text" name="email" id="email" placeholder="email profissional">
                                         <div class="xb-icon"><img src="assets/img/icon/email.svg" alt=""></div>
                                     </div>
                                     <div class="input-field nice-selt-field pos-rel">
                                         <select class="nice-select" name="subject" id="subject">
-                                            <option value="1">subject</option>
-                                            <option value="2">Product design</option>
-                                            <option value="3">brand identity</option> 
-                                            <option value="4">web development</option>
-                                            <option value="5">Business consultancy</option>
+                                            <option value="1">Design de Produto</option>
+                                            <option value="2">Identidade de Marca</option>
+                                            <option value="3">Desenvolvimento Web</option>
+                                            <option value="4">Consultoria Empresarial</option>
                                         </select>
                                     </div>
                                     <div class="input-field input-textarea pos-rel">
-                                        <textarea name="message" id="message" placeholder="message"></textarea>
+                                        <textarea name="message" id="message" placeholder="mensagem"></textarea>
                                         <div class="xb-icon"><img src="assets/img/icon/pen.svg" alt=""></div>
                                     </div>
                                 </form>
                                 <div class="xb-content pt-20 ul_li_between">
                                     <div class="xb-holder">
-                                        <span class="title">Project Budget USD</span>
+                                        <span class="title">Orçamento do Projeto</span>
                                         <ul class="stock-btn stock-btn-action ul_li">
-                                            <li>10k</li>
-                                            <li class="active">50-100K</li>
-                                            <li>100K</li>
+                                            <li>10 mil</li>
+                                            <li class="active">50-100 mil</li>
+                                            <li>+ 100 mil</li>
                                         </ul>
                                     </div>
                                     <div class="contact-btn">
-                                        <button type="submit" class="thm-btn hover-black"><i class="fa-regular fa-plus"></i>Submit</button>
+                                        <button type="submit" class="thm-btn hover-black"><i class="fa-regular fa-plus"></i>Enviar</button>
                                     </div>
                                 </div>
                             </div>
