--- a/c-etiquetas-tags.html
+++ b/c-etiquetas-tags.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Grafitize Gráfica - Papelaria e comunicação visual de alto padrão!</title>
+    <title>Etiquetas Tags Personalizadas</title>
 
     <link rel="shortcut icon" href="assets/img/favicon.png" type="images/x-icon" />
 
@@ -42,9 +42,7 @@
             <div class="loader-line-mask">
                 <div class="loader-line"></div>
             </div>
-            <div class="loader-logo">
-                
-            </div>
+            <div class="loader-logo"></div>
         </div>
     </div>
     <!-- Preloader - End -->
@@ -66,14 +64,14 @@
                         <div class="header-left ul_li">
                             <div class="header-logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo_white.png" alt="">
+                                    <img src="assets/img/logo/logo_black.png" alt="">
                                     <img src="assets/img/logo/logo_black.png" alt="">
                                 </a>
                             </div>
                             <div class="main-menu__wrap ul_li navbar navbar-expand-lg">
                                 <nav class="main-menu collapse navbar-collapse">
                                     <ul>
-                                        <li><a href="#!"><span>Home</span></a></li>
+                                        <li><a href="index.html"><span>Home</span></a></li>
                                         <li><a href="portfolio.html"><span>Catálogo</span></a></li>
                                         </li>
                                         <li class="menu-item-has-children">
@@ -184,15 +182,16 @@
                     <div class="row align-items-end mt-none-30">
                         <div class="col-lg-7 mt-30">
                             <div class="breadcrumb__content">
-                                <span class="breadcrumb__subtitle">Conheça a Grafitize</span>
-                                <h2 class="breadcrumb__title">Nossa <span>loja física</span></h2>
+                                <span class="breadcrumb__subtitle">Conheça nosso produto</span>
+                                <h2 class="breadcrumb__title">Etiquetas Tags <span>Personalizadas</span></h2>
                             </div>
                         </div>
                         <div class="col-lg-5 mt-30">
                             <div class="breadcrumb__list-wrap text-lg-end mb-20">
                                 <ul class="breadcrumb__list clearfix ul_li">
                                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                    <li class="breadcrumb-item">Contact</li>
+                                    <li class="breadcrumb-item"><a href="portfolio.html">Catálogo</a></li>
+                                    <li class="breadcrumb-item">Etiquetas Tags</li>
                                 </ul>
                             </div>
                         </div>
@@ -209,45 +208,117 @@
             </section>
             <!-- breadcrumb end -->
 
-            <!-- contact start -->
-            <section class="contact pt-120 pb-120">
+            <!-- portfolio gallery start -->
+            <section class="portfolio-gallery pt-120">
                 <div class="container">
-                    <div class="row align-items-center mt-none-30">
-                        <div class="col-lg-7 mt-30">
-                            <div class="contact-img">
-                                <div class="contact-img-item">
-                                    <img src="assets/img/contact/img_01.jpg" alt="">
-                                </div>
-                                <div class="contact-img-item">
-                                    <img src="assets/img/contact/img_02.jpg" alt="">
+                    <div class="portfolio-gallery-slider swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="portfolio-gallery-item pos-rel">
+                                    <div class="gallery-image">
+                                        <img src="assets/img/produto-single/etiquetas-tags/01.png" alt="">
+                                    </div>
+                                    <a class="xb-overlay popup-image" href="assets/img/produto-single/etiquetas-tags/01.png"></a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-5 mt-30">
-                           <div class="contact-content">
-                                <div class="sec-title sec-title--three sec-title--md mb-50">
-                                    <span class="sub-title">Nossa Loja</span>
-                                    <h2 class="title mb-15">nos encontre <span>aqui</span></h2>
+                            <div class="swiper-slide">
+                                <div class="portfolio-gallery-item pos-rel">
+                                    <div class="gallery-image">
+                                        <img src="assets/img/produto-single/etiquetas-tags/02.png" alt="">
+                                    </div>
+                                    <a class="xb-overlay popup-image" href="assets/img/produto-single/etiquetas-tags/02.png"></a>
                                 </div>
-                                <ul class="contact-info-list footer-links footer-info-list list-unstyled">
-                                    <li><a href="mailto:contato@grafitize.com.br">contato@grafitize.com.br</a></li>
-                                    <li><a href="https://wa.me/+5521998708413">+55 (21) 9 9870-8413</a></li>
-                                    <li>Rio de Janeiro, <br> Brasil</li>
-                                </ul>
-                           </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="portfolio-gallery-item pos-rel">
+                                    <div class="gallery-image">
+                                        <img src="assets/img/produto-single/etiquetas-tags/03.png" alt="">
+                                    </div>
+                                    <a class="xb-overlay popup-image" href="assets/img/produto-single/etiquetas-tags/03.png"></a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="portfolio-gallery-item pos-rel">
+                                    <div class="gallery-image">
+                                        <img src="assets/img/produto-single/etiquetas-tags/04.png" alt="">
+                                    </div>
+                                    <a class="xb-overlay popup-image" href="assets/img/produto-single/etiquetas-tags/04.png"></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <!-- contact end -->
-
-            <!-- google map start -->
-            <section class="map">
-                <div class="google-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1928.7087167207976!2d-39.03189622893422!3d-14.801812056809526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7390b005965536f%3A0x7bf4d93c7fab83b0!2sObelisco%202%20de%20Julho!5e0!3m2!1spt-BR!2sbr!4v1752781572380!5m2!1spt-BR!2sbr"></iframe>
+            <!-- portfolio gallery end -->
+            
+            <!-- service single start -->
+            <section class="service-single pt-55 pb-120">
+                <div class="container">
+                    <div class="row mt-none-30">
+                        <div class="col-lg-9 mt-30">
+                            <div class="service-single-content">
+                                <div class="portfolio-info-wrap ul_li_between mt-none-30 mb-50">
+                                    <div class="portfolio-info ul_li mt-30">
+                                        <div class="xb-item--item">
+                                            <h3 class="xb-item--title">R$76,56 - R$94,16</h3>
+                                            <span class="xb-item--desc"><strike>R$86,99 - R$106,99</strike></span>
+                                        </div>
+                                        <div class="xb-item--item">
+                                            <h3 class="xb-item--title">até 12x</h3>
+                                            <span class="xb-item--desc">no cartão de crédito</span>
+                                        </div>
+                                    </div>
+                                    <div class="portfolio-btn mt-30">
+                                        <a href="https://shopee.com.br/1000-Etiquetas-Tags-Personalizadas-Roupas-i.639391582.22298602028" target="_blank" class="thm-btn thm-btn--border"><i class="fa-regular fa-plus"></i>acessar a loja</a>
+                                    </div>
+                                </div>
+                                <h3>ATENÇÃO LEIA COM CUIDADO ANTES DE EFETUAR A COMPRA</h3>
+                                <p>Etiquetas Tags Personalizadas Roupas – Papel Couchê 300g com Verniz Total na Frente</p>
+                                <p>Especificações do Produto:<br>- Material: Couchê Brilho 300g<br>- Impressão: Colorida frente e verso (4x4)<br>- Acabamento: Verniz UV Total na frente + corte reto<br>- Formato final: 9 x 5 cm<br>- Furo padrão: 5mm<br>- Quantidade: 1.000 unidades</p>
+                                <p>ARTE FINAL<br>>> Já tem a arte pronta? <<<br>- Envie o arquivo após a compra para conferência.<br>- Certifique-se de que a arte esteja em alta resolução no tamanho 9x5 cm.<br>- Mantenha textos e elementos importantes dentro da área segura e distante do furo (8,2x 4,2 cm) para evitar cortes.</p>
+                                <p>>> Precisa que criemos a arte para você? <<<br>- Selecione a opção "PRECISO DE ARTE" no momento da compra.<br>- O envio do seu logotipo é indispensável para começarmos a criação.<br>- Iniciaremos o processo assim que o material for recebido.</p>
+                                <h3>prazo de <span>produção</span></h3>
+                                <p>- De 6 a 8 dias úteis após a aprovação final da arte.<br>- ATENÇÃO: O prazo começa a contar apenas após a confirmação de todos os detalhes do pedido.</p>
+                                <div class="row mt-none-10 g-45 mb-60">
+                                    <div class="col-lg-6 mt-30">
+                                        <img src="assets/img/produto-single/etiquetas-tags/05.png" alt="">
+                                    </div>
+                                </div>
+                                <h3><span>informações </span>importantes</h3>
+                                <p>- Todas as etiquetas devem ser da mesma arte (frente e verso). Não fracionamos a quantidade.<br>- Pode haver variação de até 8% nas cores entre o arquivo digital e o impresso.<br>- Pequenas variações de corte (milímetros) podem ocorrer – evite bordas muito próximas.<br>- Revise atentamente todas as informações antes de enviar sua arte. Não nos responsabilizamos por erros de digitação.<br>- Para melhor legibilidade, garanta bom contraste entre fundo e texto.</p>
+                                <p>HORÁRIO DE ATENDIMENTO<br>Segunda a sexta: 09h às 19h<br>Sábado: 09h às 14h<br>Mensagens enviadas fora do horário serão respondidas no próximo dia útil.</p>
+                                <p>Dúvidas?<br>Fale com a gente pelo chat da Shopee! Estamos aqui para te ajudar.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 mt-30">
+                            <div class="single-sidebar">
+                                <div class="widget">
+                                    <h2><span>more</span> portfolios</h2>
+                                    <ul class="service-widget list-unstyled">
+                                        <li><a href="service-single.html"><span><img src="assets/img/icon/sr_01.svg" alt="">Website design</span><i class="fa-regular fa-angle-right"></i></a></li>
+                                        <li><a href="service-single.html"><span><img src="assets/img/icon/sr_02.svg" alt="">business consult</span><i class="fa-regular fa-angle-right"></i></a></li>
+                                        <li><a href="service-single.html"><span><img src="assets/img/icon/sr_03.svg" alt="">branding design</span><i class="fa-regular fa-angle-right"></i></a></li>
+                                        <li><a href="service-single.html"><span><img src="assets/img/icon/sr_04.svg" alt="">Game design</span><i class="fa-regular fa-angle-right"></i></a></li>
+                                        <li><a href="service-single.html"><span><img src="assets/img/icon/sr_05.svg" alt="">SEO & Marketing</span><i class="fa-regular fa-angle-right"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="widget contact-widget">
+                                    <h2>contate-nos</h2>
+                                    <ul class="list-unstyled font-085">
+                                        <li><a href="mailto:contato@grafitize.com.br"><i class="fas fa-envelope-open"></i>contato@grafitize.com.br</a></li>
+                                        <li><a href="tel:+552199870-8413"><i class="fas fa-phone-alt"></i>+55 (21) 9 9870-8413</a></li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Rio de Janeiro, Brasil</li>
+                                    </ul>
+                                    <div class="shape">
+                                        <img src="assets/img/shape/ci_shape.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
-            <!-- google map end -->
+            <!-- service single end -->
 
             <!-- cta start -->
              <section class="cta bg_img" data-background="assets/img/bg/cta-bg.jpg">
@@ -260,7 +331,7 @@
                             <div class="xb-item--line mt-30"></div>
                             <p class="xb-item--content mt-30">COM A GENTE ACONTECE. <span>ADORARÍAMOS OUVIR VOCÊ</span></p>
                         </div>
-                        <div class="xb-item--link mt-30">ficou com alguma dúvida? <br> <a href="contact.html">Contate-nos</a></div>
+                        <div class="xb-item--link mt-30">ficou com alguma dúvida? <br> <a href="contact.html">Conheça a Grafitize</a></div>
                     </div>
                 </div>
              </section>
