--- a/portfolio.html
+++ b/portfolio.html
@@ -219,7 +219,7 @@
                                     <div class="xb-portfolio-item">
                                         <h4 class="xb-item--title mb-35"><a href="portfolio-single.html">Etiquetas Tags Personalizadas</a></h4>
                                         <div class="xb-item--img">
-                                            <a href="portfolio-single.html"><img src="assets/img/produtos/produto1.png" alt=""></a>
+                                            <a href="c-etiquetas-tags.html"><img src="assets/img/produtos/produto1.png" alt=""></a>
                                         </div>
                                         <div class="xb-item--holder ul_li_between align-items-start">
                                             <ul class="xb-item--cat ul_li">
