--- a/contact.html
+++ b/contact.html
@@ -66,37 +66,26 @@
                         <div class="header-left ul_li">
                             <div class="header-logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo_white.png" alt="">
+                                    <img src="assets/img/logo/logo_black.png" alt="">
                                     <img src="assets/img/logo/logo_black.png" alt="">
                                 </a>
                             </div>
                             <div class="main-menu__wrap ul_li navbar navbar-expand-lg">
                                 <nav class="main-menu collapse navbar-collapse">
                                     <ul>
-                                        <li><a href="#!"><span>Home</span></a></li>
+                                        <li><a href="index.html"><span>Home</span></a></li>
                                         <li><a href="portfolio.html"><span>Catálogo</span></a></li>
-                                        </li>
                                         <li class="menu-item-has-children">
                                             <a href="#!"><span>Mais Informações</span></a>
                                             <ul class="submenu">
-                                                <li><a href="about.html"><span>About</span></a></li>
-                                                <li><a href="services.html"><span>Services</span></a></li>
-                                                <li><a href="service-single.html"><span>Service Details</span></a></li>
-                                                <li><a href="team.html"><span>Team</span></a></li>
-                                                <li><a href="team-single.html"><span>Team Details</span></a></li>
-                                                <li><a href="career.html"><span>Career</span></a></li>
-                                                <li><a href="career-single.html"><span>Career Details</span></a></li>
+                                                <li><a href="about.html"><span>Sobre nós</span></a></li>
+                                                <li><a href="services.html"><span>Serviços</span></a></li>
+                                                <li><a href="career.html"><span>Conquistas</span></a></li>
                                                 <li><a href="faq.html"><span>FAQ</span></a></li>
                                             </ul>
                                         </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#!"><span>Blog</span></a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html"><span>Blog</span></a></li>
-                                                <li><a href="blog-single.html"><span>Blog Details</span></a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html"><span>Contact</span></a></li>
+                                        <li><a href="blog.html"><span>Blog</span></a></li>
+                                        <li><a href="contact.html"><span>Nossa Sede</span></a></li>
                                     </ul>
                                 </nav>
                                 <div class="xb-header-wrap">
@@ -117,36 +106,19 @@
                                             </div>
                                             <nav class="xb-header-nav">
                                                 <ul class="xb-menu-primary clearfix">
-                                                    <li class="menu-item menu-item-has-children active">
-                                                        <a href="#!"><span>Home</span></a>
-                                                        <ul class="sub-menu">
-                                                            <li class="active"><a href="index.html"><span>Home 01</span></a></li>
-                                                            <li><a href="home-2.html"><span>Home 02</span></a></li>
-                                                            <li><a href="home-3.html"><span>Home 03</span></a></li>
-                                                        </ul>
-                                                    </li>
+                                                    <li><a href="index.html"><span>Home</span></a></li>
+                                                    <li><a href="portfolio.html"><span>Catálogo</span></a></li>
                                                     <li class="menu-item menu-item-has-children">
-                                                        <a href="#!"><span>Pages</span></a>
+                                                        <a href="#!"><span>Mais Informações</span></a>
                                                         <ul class="sub-menu">
-                                                            <li><a href="about.html"><span>About</span></a></li>
-                                                            <li><a href="services.html"><span>Services</span></a></li>
-                                                            <li><a href="service-single.html"><span>Service Details</span></a></li>
-                                                            <li><a href="team.html"><span>Team</span></a></li>
-                                                            <li><a href="team-single.html"><span>Team Details</span></a></li>
-                                                            <li><a href="career.html"><span>Career</span></a></li>
-                                                            <li><a href="career-single.html"><span>Career Details</span></a></li>
+                                                            <li><a href="about.html"><span>Sobre nós</span></a></li>
+                                                            <li><a href="services.html"><span>Serviços</span></a></li>
+                                                            <li><a href="career.html"><span>Conquistas</span></a></li>
                                                             <li><a href="faq.html"><span>FAQ</span></a></li>
                                                         </ul>
                                                     </li>
-                                                    <li><a href="portfolio.html"><span>Catálogo</span></a></li>
-                                                    <li class="menu-item menu-item-has-children">
-                                                        <a href="#!"><span>Blog</span></a>
-                                                        <ul class="sub-menu">
-                                                            <li><a href="blog.html"><span>Blog</span></a></li>
-                                                            <li><a href="blog-single.html"><span>Blog Details</span></a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <li><a href="contact.html"><span>Contact</span></a></li>
+                                                    <li><a href="blog.html"><span>Blog</span></a></li>
+                                                    <li><a href="contact.html"><span>Nossa Sede</span></a></li>
                                                 </ul>
                                                 
                                             </nav>
@@ -159,7 +131,7 @@
                         <div class="header-right ul_li">
                             <span class="header-contact">compre agora com desconto</span>
                             <div class="header-btn d-none d-md-block">
-                                <a href="https://shopee.com.br/grafitizegrafica" target="_blank" class="thm-btn"><i class="fa-regular fa-plus"></i>Shopee</a>
+                                <a href="https://shopee.com.br/vcrotuloseadesivos" target="_blank" class="thm-btn"><i class="fa-regular fa-plus"></i>Shopee</a>
                             </div>
                             <div class="header-bar-mobile side-menu d-lg-none">
                                 <a class="xb-nav-mobile hamburger-menu" href="javascript:void(0);">
@@ -192,7 +164,7 @@
                             <div class="breadcrumb__list-wrap text-lg-end mb-20">
                                 <ul class="breadcrumb__list clearfix ul_li">
                                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                    <li class="breadcrumb-item">Contact</li>
+                                    <li class="breadcrumb-item">Nossa Sede</li>
                                 </ul>
                             </div>
                         </div>
@@ -250,7 +222,7 @@
             <!-- google map end -->
 
             <!-- cta start -->
-             <section class="cta bg_img" data-background="assets/img/bg/cta-bg.jpg">
+            <section class="cta bg_img" data-background="assets/img/bg/cta-bg.jpg">
                 <div class="container">
                     <div class="cta-wrap ul_li_between">
                         <div class="xb-item--holder ul_li">
@@ -260,10 +232,9 @@
                             <div class="xb-item--line mt-30"></div>
                             <p class="xb-item--content mt-30">COM A GENTE ACONTECE. <span>ADORARÍAMOS OUVIR VOCÊ</span></p>
                         </div>
-                        <div class="xb-item--link mt-30">ficou com alguma dúvida? <br> <a href="contact.html">Contate-nos</a></div>
                     </div>
                 </div>
-             </section>
+            </section>
             <!-- cta end -->
             
         </main>
@@ -272,7 +243,7 @@
         <!-- footer strt -->
         <footer class="footer footer-style-one" data-bg-color="#000">
             <div class="container">
-                <div class="footer-wrap ul_li_between align-items-start">
+                <div class="footer-wrap ul_li_between align-items-start mb-15">
                     <div class="footer-widget footer-widget--two">
                         <span class="xb-item--title">essencial</span>
                         <ul class="footer-links list-unstyled">
@@ -280,26 +251,22 @@
                             <li><a href="portfolio.html">Catálogo</a></li>
                             <li><a href="about.html">Sobre nós</a></li>
                             <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contato</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-line"></div>
-                    <div class="footer-widget footer-widget--two">
-                        <span class="xb-item--title">SIGA-NOS</span>
-                        <ul class="footer-links list-unstyled">
-                            <li><a href="#!">facebook</a></li>
-                            <li><a href="#!">twitter</a></li>
-                            <li><a href="#!">behance</a></li>
-                            <li><a href="#!">dribbble</a></li>
-                            <li><a href="#!">youtube</a></li>
+                            <li><a href="contact.html">Nossa sede</a></li>
                         </ul>
                     </div>
                     <div class="footer-widget footer-widget--two">
                         <span class="xb-item--title">fale conosco</span>
                         <ul class="footer-links list-unstyled">
                             <li>contato@grafitize.com.br</li>
-                            <li>(21) 99870-8413</li>
+                            <li>(21) 9 9870-8413</li>
                             <li>Rio de Janeiro, Brasil</li>
+                        </ul>
+                    </div>
+                    <div class="footer-widget footer-widget--two">
+                        <span class="xb-item--title">SIGA-NOS</span>
+                        <ul class="footer-links list-unstyled">
+                            <li><a href="https://www.instagram.com/grafitize.grafica/" target="_blank">Instagram</a></li>
+                            <li><a href="https://wa.me/5521998708413" target="_blank">Whatsapp</a></li>
                         </ul>
                     </div>
                 </div>
@@ -310,12 +277,6 @@
                         <div class="xb-copyright">
                             <p>copyright <a href="contact.html">Grafitize Gráfica</a> - 2025</p>
                         </div>
-                        <ul class="footer_nav list-unstyled ul_li">
-                            <li><a href="#!">get in touch</a></li>
-                            <li><a href="#!">faq</a></li>
-                            <li><a href="#!">careers</a></li>
-                            <li><a href="#!">t & c</a></li>
-                        </ul>
                     </div>
                 </div>
             </div>
