--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                     <div class="xb-portfolio-item">
                                         <h4 class="xb-item--title mb-35"><a href="portfolio-single.html">Etiquetas Tags Personalizadas</a></h4>
                                         <div class="xb-item--img">
-                                            <a href="portfolio-single.html"><img src="assets/img/produtos/amostra1.png" alt=""></a>
+                                            <a href="c-etiquetas-tags.html"><img src="assets/img/produtos/amostra1.png" alt=""></a>
                                         </div>
                                         <div class="xb-item--holder ul_li_between align-items-start">
                                             <ul class="xb-item--cat ul_li">
@@ -219,7 +219,7 @@
                                     <div class="xb-portfolio-item">
                                         <h4 class="xb-item--title mb-35"><a href="portfolio-single.html">Etiquetas Adesivas</a></h4>
                                         <div class="xb-item--img">
-                                            <a href="portfolio-single.html"><img src="assets/img/produtos/amostra2.png" alt=""></a>
+                                            <a href="#!"><img src="assets/img/produtos/amostra2.png" alt=""></a>
                                         </div>
                                         <div class="xb-item--holder ul_li_between align-items-start">
                                             <ul class="xb-item--cat ul_li">
@@ -236,7 +236,7 @@
                                     <div class="xb-portfolio-item">
                                         <h4 class="xb-item--title mb-35"><a href="portfolio-single.html">Cartões de Visita Frente e Verso</a></h4>
                                         <div class="xb-item--img">
-                                            <a href="portfolio-single.html"><img src="assets/img/produtos/amostra3.png" alt=""></a>
+                                            <a href="c-cartoes-visita.html"><img src="assets/img/produtos/amostra3.png" alt=""></a>
                                         </div>
                                         <div class="xb-item--holder ul_li_between align-items-start">
                                             <ul class="xb-item--cat ul_li">
@@ -249,7 +249,7 @@
                                     <div class="xb-portfolio-item">
                                         <h4 class="xb-item--title mb-35"><a href="portfolio-single.html">Cartão de Agradecimento</a></h4>
                                         <div class="xb-item--img">
-                                            <a href="portfolio-single.html"><img src="assets/img/produtos/amostra4.png" alt=""></a>
+                                            <a href="c-cartao-agradecimento.html"><img src="assets/img/produtos/amostra4.png" alt=""></a>
                                         </div>
                                         <div class="xb-item--holder ul_li_between align-items-start">
                                             <ul class="xb-item--cat ul_li">
@@ -266,7 +266,7 @@
                                     <div class="xb-portfolio-item">
                                         <h4 class="xb-item--title mb-35"><a href="portfolio-single.html">Panfletos</a></h4>
                                         <div class="xb-item--img">
-                                            <a href="portfolio-single.html"><img src="assets/img/produtos/amostra5.png" alt=""></a>
+                                            <a href="#!"><img src="assets/img/produtos/amostra5.png" alt=""></a>
                                         </div>
                                         <div class="xb-item--holder ul_li_between align-items-start">
                                             <ul class="xb-item--cat ul_li">
@@ -279,7 +279,7 @@
                                     <div class="xb-portfolio-item">
                                         <h4 class="xb-item--title mb-35"><a href="portfolio-single.html">Abadás Personalizados</a></h4>
                                         <div class="xb-item--img">
-                                            <a href="portfolio-single.html"><img src="assets/img/produtos/amostra6.png" alt=""></a>
+                                            <a href="c-abadas-perso.html"><img src="assets/img/produtos/amostra6.png" alt=""></a>
                                         </div>
                                         <div class="xb-item--holder ul_li_between align-items-start">
                                             <ul class="xb-item--cat ul_li">
